--- a/ESME_eleve/app/src/main/AndroidManifest.xml
+++ b/ESME_eleve/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.esme">
 
     <application
@@ -10,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ESMEÉlève">
         <activity
-            android:name=".CalendarAdapter"
-            android:exported="false" />
+            android:name=".Calendarv2"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -24,6 +24,8 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
+
     </application>
 
 </manifest>
