gneugneu liste notes finie

--- a/ESME_eleve/app/src/main/AndroidManifest.xml
+++ b/ESME_eleve/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ESMEÉlève">
         <activity
+            android:name=".NotesActivity"
+            android:exported="false" />
+        <activity
             android:name=".CustomAdapterNotes"
             android:exported="false" />
         <activity
