--- a/ESME_eleve/app/build.gradle
+++ b/ESME_eleve/app/build.gradle
@@ -34,6 +34,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment:2.4.1'
+    implementation 'androidx.navigation:navigation-ui:2.4.1'
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
     implementation 'com.google.firebase:firebase-auth'
