--- a/ESME_eleve/app/src/main/AndroidManifest.xml
+++ b/ESME_eleve/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ESMEÉlève">
         <activity
+            android:name=".New_Event_Cours"
+            android:exported="false" />
+        <activity
             android:name=".MenuDeroulantActivity"
             android:exported="false"
             android:label="@string/title_activity_menu_deroulant"
